Compind v2.5 (Release date: 2022-6-20)
==============
Changes:

* problem in a linked package (nonparaeff). Removed function ci_bod_var_w

Compind v2.4 (Release date: 2022-5-24)
==============
Changes:

* problem in a linked package (smaa). This problem has been fixed.

Compind v2.3 (Release date: 2021-4-09)
==============
Changes:

* ci_smaa_constr function example corrected

Compind v2.2 (Release date: 2021-4-9)
==============
Changes:

* ci_ampi (Adjusted Mazziotta-Pareto Index (AMPI) method) function fixed: 
	(1) negative penalty as default; 
	(2) fixed, in the help, the explanation of the penalty that is = NEG for positive indicators and = POS for negative indicators (for example: deprivation);
	(3) calculation of standard deviation divided by n (and not by n-1).



Compind v2.0 (Release date: 2018-2-13)
==============
Changes:

New functions:

* ci_bod_constr_bad: Constrained Benefit of the Doubt approach (BoD) in presence of undesirable  indicators
* ci_rbod_constr_bad: Robust constrained Benefit of the Doubt approach (BoD) in presence of undesirable  indicators.
* ci_rbod_constr_bad_Q: Conditional robust constrained Benefit of the Doubt approach (BoD) in presence of undesirable  indicators
* ci_rbod_spatial: Spatial robust Benefit of the Doubt approach (Sp-RBoD)
* ci_smaa_constr: Constrained stochastic multi-objective acceptability analysis (C-SMAA)
* ci_ampi: Adjusted Mazziotta-Pareto Index (AMPI) method


Compind v1.2.1 (Release date: 2017-07-12)
============== 
Changes: 

* ci_geom_bod_intertemp: correction due to new R functionalities



Compind v1.2 (Release date: 2017-16-06)
==============
Changes:

New functions:
* ci_bod_constr: Constrained Benefit of the Doubt approach
* ci_generalized_mean: Weighting method based on generalized mean
* ci_geom_bod_intertemp: Intertemporal analysis for geometric mean quantity index numbers
* ci_geom_gen: generalization of the previous function "ci_mean_geom"

Deleted
* ci_bod_vrs

