@@ -1,8 +1,8 @@
 Package: Compind
 Type: Package
 Title: Composite Indicators Functions
-Version: 2.5
-Date: 2022-5-24
+Version: 2.6
+Date: 2022-7-5
 Author: Francesco Vidoli, Elisa Fusco
 Maintainer: Francesco Vidoli <fvidoli@gmail.com>
 Description: A collection of functions to calculate Composite Indicators methods, focusing, in particular, on the normalisation and weighting-aggregation steps, as described in OECD Handbook on constructing composite indicators: methodology and user guide <https://www.oecd.org/els/soc/handbookonconstructingcompositeindicatorsmethodologyanduserguide.htm>, 'Vidoli' and 'Fusco' and 'Mazziotta' <doi:10.1007/s11205-014-0710-y>, 'Mazziotta' and 'Pareto' (2016) <doi:10.1007/s11205-015-0998-2>, 'Van Puyenbroeck and 'Rogge' <doi:10.1016/j.ejor.2016.07.038> and other authors.
@@ -12,6 +12,6 @@ License: GPL-3
 Suggests: R.rsp
 VignetteBuilder: R.rsp
 NeedsCompilation: no
-Packaged: 2022-06-20 11:29:05 UTC; Fra
+Packaged: 2022-07-05 13:36:47 UTC; Fra
 Repository: CRAN
-Date/Publication: 2022-06-20 11:50:02 UTC
+Date/Publication: 2022-07-05 14:10:02 UTC
